fix: search scrollbar not visible when no editor is opened (#1442)

--- a/static/css/parts/ViewletEditor.css
+++ b/static/css/parts/ViewletEditor.css
@@ -123,29 +123,6 @@
   contain: content;
 }
 
-.ScrollBar,
-.ScrollBarSmall {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 14px;
-  bottom: 0;
-  contain: strict;
-  cursor: default;
-}
-
-.ScrollBarSmall {
-  width: 10px;
-}
-
-.ScrollBarThumb {
-  width: 100%;
-  /* height: 40px; */
-  position: absolute;
-  contain: strict;
-  background: var(--EditorScrollBarBackground, rgba(57, 71, 71, 0.6));
-}
-
 .LayerCursor {
   position: absolute;
   inset: 0;
